# Archery

./: .coveragerc  .dockerignore  .env.list  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile-base  Q-Dockerfile  README.md  admin.sh  conftest.py  debug.bat  debug.sh  dev-requirements.txt  django_1.8.17_admin_secure_archer.patch  docker-compose.dev.yml  docker_local_settings.py  et commit_id1  local_settings_i18n.py  manage.py  masking.sh  mkdocs.yml  nginx.conf  nohup.out  package-lock.json  package.json  pyproject.toml  qcluster_supervisord.conf  re.txt  requirements.txt  startup.sh  stop.sh  supervisord.conf
.github/: config.yml  copilot-instructions.md  release-drafter.yml  stale.yml
.github/ISSUE_TEMPLATE/: ------.md  ----.md  bug--.md  bug-report.yml  bug.md  bug.yml  bug_report.md  config.yml  custom.md  feature_request.md
.github/agents/: speckit.analyze.agent.md  speckit.checklist.agent.md  speckit.clarify.agent.md  speckit.implement.agent.md  speckit.plan.agent.md  speckit.specify.agent.md  speckit.tasks.agent.md  speckit.taskstoissues.agent.md
.github/workflows/: codeql-analysis.yml  django.yml  docker-base-image.yml  docker-image.yml  stale.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
archer/: settings.py  urls.py  wsgi.py
archery/: __init__.py  asgi.py  celery.py  settings.py  settting.py.bak  urls.py  urls.py.bak  wsgi.py
common/: auth.py  check.py  config.py  dashboard.py  dict.py  storage.py  test_dashboard.py  test_workflow.py  tests.py  views.py  workflow.py
common/authenticate/: cas_auth.py  dingding_auth.py  oidc_auth.py  test_oidc_auth.py
common/middleware/: check_login_middleware.py  custom_CAS_login.py  custom_renderer.py  exception_logging_middleware.py
common/properties/: __init__.py  application.yaml
common/static/: style.css
common/templates/: 2fa.html  base.html  config.html  dashboard.html  dictionaryexport.html  login.html
common/twofa/: __init__.py  sms.py  totp.py
common/utils/: aes_decryptor.py  aliyun_sdk.py  aliyun_sms.py  api.py  chart_dao.py  const.py  convert.py  ding_api.py  extend_json_encoder.py  feishu_api.py  feishu_api_new.py  get_logger.py  global_info.py  object_to_jsonised.py  openai.py  permission.py  sendmsg.py  tencent_sms.py  timer.py  wx_api.py
docs/: FAQ.md  config.md  docs.md  index.md  installation.md  mysql_db_design_guide.docx  mysql_db_design_guide.md  mysql_db_design_tips.docx  requirements.txt  user_guide.md
downloads/dictionary/: test_instance_test_archery.html
env/: pyvenv.cfg
inspur/: apps.py  models.py  mysql_exec.py  urls.py  views.py
oidc/: auth.py
patch/: django_1.8.17_admin_secure_archer.patch
scripts/: run_pytest.sh
sql/: admin.py  aliyun_api.py  aliyun_function.py  aliyun_rds.py  archiver.py  audit_log.py  binlog.py  binlog2sql.py  charts.py  check_login_middleware.py  config.py  const.py  dao.py  data_dictionary.py  data_masking.py  db_diagnostic.py  db_diagnostics.py  extend_json_encoder.py  form.py  group.py  groupmgmt.py  inception.py  inception.py.bak  instance.py  instance_account.py  instance_database.py  jobs.py  models.py  notify.py  offlinedownload.py  permission.py  process.py  processor.py  query.py  query_privileges.py  redis.py  resource_group.py  sendmail.py  slowlog.py  soar.py  (+33 more)
sql_api/: api_instance.py  api_sqlquery.py  api_user.py  api_workflow.py  apps.py  filters.py  pagination.py  permissions.py  renderers.py  serializers.py  sqlquery_response.py  table_instance_locator.py  tasks.py  test_permission_model.py  test_permissions.py  test_sqlquery_api.py  test_table_instance_locator.py  tests.py  urls.py  views.py
src/docker/SQLAdvisor/sql/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  delayable_insert_operation.h  event_parse_data.cc  event_parse_data.h  gen_lex_hash  global_threads.h  handler.cc  handler.h  item.cc  item.h  item_cmpfunc.cc  item_cmpfunc.h  item_create.cc  item_create.h  item_func.cc  item_func.h  item_geofunc.cc  item_geofunc.h  item_inetfunc.h  item_row.cc  item_row.h  item_strfunc.cc  item_strfunc.h  item_subselect.cc  item_subselect.h  item_sum.cc  item_sum.h  item_timefunc.cc  item_timefunc.h  item_xmlfunc.cc  item_xmlfunc.h  key.h  lex.h  lex_hash.h  log.cc  log.h  mysqld.cc  (+75 more)
src/docker/SQLAdvisor/sql/share/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  errmsg-utf8.txt
src/docker/SQLAdvisor/sql/share/bulgarian/: errmsg.sys
src/docker/SQLAdvisor/sql/share/czech/: errmsg.sys
src/docker/SQLAdvisor/sql/share/danish/: errmsg.sys
src/docker/SQLAdvisor/sql/share/dutch/: errmsg.sys
src/docker/SQLAdvisor/sql/share/english/: errmsg.sys
src/docker/SQLAdvisor/sql/share/estonian/: errmsg.sys
src/docker/SQLAdvisor/sql/share/french/: errmsg.sys
src/docker/SQLAdvisor/sql/share/german/: errmsg.sys
src/docker/SQLAdvisor/sql/share/greek/: errmsg.sys
src/docker/SQLAdvisor/sql/share/hungarian/: errmsg.sys
src/docker/SQLAdvisor/sql/share/italian/: errmsg.sys
src/docker/SQLAdvisor/sql/share/japanese/: errmsg.sys
src/docker/SQLAdvisor/sql/share/korean/: errmsg.sys
src/docker/SQLAdvisor/sql/share/norwegian/: errmsg.sys
src/docker/SQLAdvisor/sql/share/norwegian-ny/: errmsg.sys
src/docker/SQLAdvisor/sql/share/polish/: errmsg.sys
src/docker/SQLAdvisor/sql/share/portuguese/: errmsg.sys
src/docker/SQLAdvisor/sql/share/romanian/: errmsg.sys
src/docker/SQLAdvisor/sql/share/russian/: errmsg.sys
src/docker/SQLAdvisor/sql/share/serbian/: errmsg.sys
src/docker/SQLAdvisor/sql/share/slovak/: errmsg.sys
src/docker/SQLAdvisor/sql/share/spanish/: errmsg.sys
src/docker/SQLAdvisor/sql/share/swedish/: errmsg.sys
src/docker/SQLAdvisor/sql/share/ukrainian/: errmsg.sys
src/docker/SQLAdvisor/sqladvisor/: CMakeLists.txt  README  main.cc
themis/: themis.py  urls.py  views.py
(+1252 files in other folders)
